Was created custom reaction view.

--- a/app/src/main/res/layout/item_add_reaction.xml
+++ b/app/src/main/res/layout/item_add_reaction.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:padding="2dp"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/ic_add_reaction" />
-
-</FrameLayout>
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:adjustViewBounds="true"
+    android:padding="2dp"
+    app:srcCompat="@drawable/ic_add_reaction" />
