--- a/app/src/main/res/layout/item_reaction.xml
+++ b/app/src/main/res/layout/item_reaction.xml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sceyt.chat.ui.presentation.customviews.ReactionView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/reactionView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_stroke"
-    android:paddingHorizontal="6dp"
-    android:paddingVertical="4dp">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvEmoji"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:includeFontPadding="false"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="😍" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:includeFontPadding="false"
-        android:textColor="#000000"
-        android:textSize="@dimen/extraSmallTextSize"
-        app:layout_constraintBottom_toBottomOf="@+id/tvEmoji"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvEmoji"
-        app:layout_constraintTop_toTopOf="@+id/tvEmoji"
-        tools:text="2" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    app:reactionViewCountTextMargin="5dp"
+    app:reactionViewInnerPaddingHorizontal="5dp"
+    app:reactionViewInnerPaddingVertical="4dp"
+    app:reactionViewStrokeCornerRadius="30dp"
+    app:reactionViewStrokeWidth="1dp"
+    tools:reactionViewCountText="2"
+    tools:reactionViewSmileText="😍" />
