Was refactored some views. Was fixed some UI components from dark theme in messages page.

--- a/app/src/main/res/layout/sceyt_ui_item_reaction.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_reaction.xml
@@ -10,5 +10,6 @@
     app:reactionViewInnerPaddingVertical="4dp"
     app:reactionViewStrokeCornerRadius="30dp"
     app:reactionViewStrokeWidth="1dp"
+    app:reactionViewCountTextColor="@color/black"
     tools:reactionViewCountText="2"
     tools:reactionViewSmileText="😍" />
