--- a/app/src/main/res/layout/sceyt_ui_recycler_replay_container.xml
+++ b/app/src/main/res/layout/sceyt_ui_recycler_replay_container.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="8dp"
         android:includeFontPadding="false"
         android:singleLine="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="@dimen/extraSmallTextSize"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@+id/tvMessageBody"
@@ -54,7 +54,7 @@
         android:layout_marginTop="2dp"
         android:includeFontPadding="false"
         android:singleLine="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="@dimen/smallTextSize"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
