--- a/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
@@ -75,7 +75,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 android:singleLine="true"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/extraSmallTextSize"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +153,7 @@
             android:paddingTop="4dp"
             android:visibility="gone"
             tools:itemCount="3"
-            tools:listitem="@layout/item_reaction" />
+            tools:listitem="@layout/sceyt_ui_item_reaction" />
 
     </RelativeLayout>
 </layout>
