--- a/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
@@ -135,7 +135,7 @@
             android:paddingTop="4dp"
             android:visibility="gone"
             tools:itemCount="3"
-            tools:listitem="@layout/item_reaction" />
+            tools:listitem="@layout/sceyt_ui_item_reaction" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvReplayCount"
