Was created functionality to send and receive messages. Was started functionality to update message status. Was added UI and functionality for deleted messages.

--- a/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
@@ -118,7 +118,7 @@
                 app:statusIconMargin="5dp"
                 app:statusIconSize="16dp"
                 bind:incoming="@{message.incoming}"
-                bind:status="@{message.deliveryStatus}"
+                bind:status="@{message.status}"
                 tools:dateText="00:37"
                 tools:statusIcon="@drawable/ic_status_read" />
 
