--- a/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
@@ -46,6 +46,7 @@
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/layoutDetails"
+            bind:invisibleIfCheckGone="@{!message.canShowAvatarAndName}"
             tools:avatarFullName="Ar"
             tools:visibility="visible" />
 
@@ -84,6 +85,7 @@
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                bind:visibleIf="@{message.canShowAvatarAndName}"
                 tools:text="Henry Willian" />
 
             <include
@@ -150,8 +152,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/rvReactions"
-            android:layout_marginStart="2dp"
             android:layout_marginVertical="4dp"
+            android:layout_marginStart="2dp"
             android:layout_toEndOf="@+id/toReplayLine"
             android:includeFontPadding="false"
             android:textColor="@color/colorAccent"
