--- a/app/src/main/res/layout/sceyt_ui_item_out_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_deleted_message.xml
@@ -38,18 +38,6 @@
             bind:visibleIf="@{message.showDate}"
             tools:text="Feb 24" />
 
-        <com.sceyt.chat.ui.presentation.customviews.ToReplayLineView
-            android:id="@+id/toReplayLine"
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/layoutDetails"
-            android:layout_alignBottom="@+id/tvReplayCount"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5sp"
-            android:visibility="gone"
-            app:toLeft="true" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layoutDetails"
             android:layout_width="wrap_content"
@@ -58,33 +46,21 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/bg_out_message">
 
-            <include
-                android:id="@+id/viewReplay"
-                layout="@layout/sceyt_ui_recycler_replay_container"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="@color/colorFontDarkFinal"
+                android:layout_marginVertical="8dp"
+                android:text="@string/message_was_deleted"
+                android:textColor="@color/colorFontGray"
                 android:textSize="@dimen/mediumTextSize"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-                app:layout_constraintTop_toBottomOf="@+id/viewReplay"
-                app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
-                tools:text="Lore ipsum description is created from" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
 
             <com.sceyt.chat.ui.presentation.customviews.DateStatusView
                 android:id="@+id/messageDate"
@@ -100,39 +76,9 @@
                 app:layout_constraintEnd_toEndOf="@id/layoutDetails"
                 app:statusIconMargin="5dp"
                 app:statusIconSize="16dp"
-                bind:incoming="@{message.incoming}"
-                bind:status="@{message.status}"
-                tools:dateText="00:37"
-                tools:statusIcon="@drawable/ic_status_read" />
+                tools:dateText="00:37"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvReactions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layoutDetails"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="3dp"
-            android:orientation="horizontal"
-            android:paddingTop="4dp"
-            android:visibility="gone"
-            tools:itemCount="3"
-            tools:listitem="@layout/sceyt_ui_item_reaction" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvReplayCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/rvReactions"
-            android:layout_marginVertical="4dp"
-            android:layout_marginEnd="2dp"
-            android:layout_toStartOf="@+id/toReplayLine"
-            android:includeFontPadding="false"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/tinyTextSize"
-            android:visibility="gone"
-            tools:text="34 reply" />
 
     </RelativeLayout>
 </layout>
