--- a/app/src/main/res/drawable/ic_status_not_sent.xml
+++ b/app/src/main/res/drawable/ic_status_not_sent.xml
@@ -3,18 +3,27 @@
     android:height="11dp"
     android:viewportWidth="11"
     android:viewportHeight="11">
-  <path
-      android:strokeWidth="1"
-      android:pathData="M5.5,10C7.9853,10 10,7.9853 10,5.5C10,3.0147 7.9853,1 5.5,1C3.0147,1 1,3.0147 1,5.5C1,7.9853 3.0147,10 5.5,10Z"
-      android:strokeLineJoin="round"
-      android:fillColor="#00000000"
-      android:strokeColor="#7C7E8E"
-      android:strokeLineCap="round"/>
-  <path
-      android:strokeWidth="1"
-      android:pathData="M5.5,2.8003V5.5003L7.3,6.4003"
-      android:strokeLineJoin="round"
-      android:fillColor="#00000000"
-      android:strokeColor="#7C7E8E"
-      android:strokeLineCap="round"/>
+
+  <group
+      android:scaleX="0.8"
+      android:scaleY="0.8"
+      android:pivotX="6"
+      android:pivotY="6">
+
+    <path
+        android:strokeWidth="1"
+        android:pathData="M5.5,10C7.9853,10 10,7.9853 10,5.5C10,3.0147 7.9853,1 5.5,1C3.0147,1 1,3.0147 1,5.5C1,7.9853 3.0147,10 5.5,10Z"
+        android:strokeLineJoin="round"
+        android:fillColor="#00000000"
+        android:strokeColor="#7C7E8E"
+        android:strokeLineCap="round"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M5.5,2.8003V5.5003L7.3,6.4003"
+        android:strokeLineJoin="round"
+        android:fillColor="#00000000"
+        android:strokeColor="#7C7E8E"
+        android:strokeLineCap="round"/>
+  </group>
+
 </vector>
