--- a/app/src/main/res/drawable/ic_status_on_server.xml
+++ b/app/src/main/res/drawable/ic_status_on_server.xml
@@ -1,13 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="12dp"
-    android:height="9dp"
-    android:viewportWidth="12"
-    android:viewportHeight="9">
+    android:width="8dp"
+    android:height="5.714286dp"
+    android:viewportWidth="14"
+    android:viewportHeight="10">
   <path
-      android:pathData="M0.918,4.8308L4.3221,8L10.9999,1"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
       android:fillColor="#00000000"
+      android:pathData="M2.574,5.338L5.432,7.726L11.5,1"
+      android:strokeWidth="1.4"
       android:strokeColor="#7C7E8E"
-      android:strokeLineCap="round"/>
+      android:strokeLineCap="round"
+      android:strokeLineJoin="round" />
 </vector>
