--- a/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_files_message.xml
@@ -69,14 +69,15 @@
             android:layout_toEndOf="@+id/avatar"
             android:background="@drawable/bg_inc_message"
             android:maxWidth="@dimen/bodyMaxWidth"
-            android:minWidth="@dimen/bodyMaxWidth">
+            android:minWidth="@dimen/bodyMaxWidth"
+            android:paddingTop="2dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvUserName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:singleLine="true"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/extraSmallTextSize"
@@ -94,7 +95,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
