--- a/app/src/main/res/layout/sceyt_ui_item_out_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_deleted_message.xml
@@ -50,14 +50,15 @@
                 android:id="@+id/messageBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginVertical="8dp"
                 android:text="@string/message_was_deleted"
                 android:textColor="@color/colorFontGray"
                 android:textSize="@dimen/mediumTextSize"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
-                app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+                app:layout_constraintEnd_toStartOf="@+id/messageDate"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
