--- a/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
@@ -56,7 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/messageDay"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/bg_out_message">
+            android:background="@drawable/bg_out_message"
+            android:paddingTop="2dp">
 
             <include
                 android:id="@+id/viewReplay"
@@ -64,7 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
