--- a/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
@@ -120,13 +120,15 @@
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="6dp"
+                android:layout_marginEnd="5dp"
+                android:paddingHorizontal="8dp"
+                android:layout_marginBottom="2dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
                 app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
                 app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+                app:statusIconSize="16dp"
                 tools:dateText="00:37" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
