--- a/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
@@ -94,8 +94,8 @@
                 android:id="@+id/rvFiles"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:orientation="vertical"
-                android:paddingBottom="4dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,14 +108,14 @@
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="3dp"
-                android:paddingHorizontal="6dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="2dp"
+                android:paddingHorizontal="8dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
-                app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
-                app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                app:layout_constraintEnd_toEndOf="@id/rvFiles"
                 app:statusIconMargin="5dp"
                 app:statusIconSize="16dp"
                 bind:incoming="@{message.incoming}"
