--- a/app/src/main/res/layout/sceyt_ui_message_image_item.xml
+++ b/app/src/main/res/layout/sceyt_ui_message_image_item.xml
@@ -1,51 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/fileImage"
+    <data>
+
+        <variable
+            name="data"
+            type="com.sceyt.chat.ui.data.models.messages.UploadData" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorFontGray"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:.8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize18" />
+        android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/viewBg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/progress_circle_back_phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/fileImage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/colorFontGray"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:.8"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize18" />
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/loadProgress"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layerType="hardware"
-        android:progress="1"
-        app:indicatorColor="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/viewBg"
-        app:layout_constraintEnd_toEndOf="@+id/viewBg"
-        app:layout_constraintStart_toStartOf="@+id/viewBg"
-        app:layout_constraintTop_toTopOf="@+id/viewBg"
-        app:trackColor="@color/white_final"
-        app:trackCornerRadius="5dp"
-        app:trackThickness="2.5dp" />
+        <View
+            android:id="@+id/viewBg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/progress_circle_back_phone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Group
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="loadProgress,viewBg" />
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loadProgress"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layerType="hardware"
+            android:progress="@{data.progress}"
+            app:indicatorColor="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="@+id/viewBg"
+            app:layout_constraintEnd_toEndOf="@+id/viewBg"
+            app:layout_constraintStart_toStartOf="@+id/viewBg"
+            app:layout_constraintTop_toTopOf="@+id/viewBg"
+            app:trackColor="@color/white_final"
+            app:trackCornerRadius="5dp"
+            app:trackThickness="2.5dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="loadProgress,viewBg"
+            bind:visibleIf="@{data.uploadingg}" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
