--- a/app/src/main/res/layout/sceyt_ui_message_video_item.xml
+++ b/app/src/main/res/layout/sceyt_ui_message_video_item.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="isLoading"
-            type="Boolean" />
+            name="loadData"
+            type="com.sceyt.chat.ui.data.models.messages.FileLoadData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
-        android:background="@drawable/rounded_video_background"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_video_background">
 
         <VideoView
             android:id="@+id/videoView"
@@ -36,11 +37,12 @@
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/loadProgress"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layerType="hardware"
-            android:progress="1"
+            android:progress="@{loadData.progressPercent, default = 1}"
             app:indicatorColor="@color/colorAccent"
+            app:indicatorSize="40dp"
             app:layout_constraintBottom_toBottomOf="@+id/viewBg"
             app:layout_constraintEnd_toEndOf="@+id/viewBg"
             app:layout_constraintStart_toStartOf="@+id/viewBg"
@@ -53,7 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:constraint_referenced_ids="loadProgress,viewBg" />
+            app:constraint_referenced_ids="loadProgress,viewBg"
+            bind:visibleIf="@{loadData.loading}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
