Was created functionality to upload and download files.

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -6,4 +6,10 @@
     <cache-path
         name="cache"
         path="." />
+    <files-path
+        name="files"
+        path="/userfiles" />
+    <files-path
+        name="files"
+        path="." />
 </paths>
