--- a/app/src/main/res/layout/view_message_box.xml
+++ b/app/src/main/res/layout/view_message_box.xml
@@ -32,6 +32,8 @@
         android:hint="@string/message"
         android:inputType="textMultiLine"
         android:maxLines="3"
+        android:textColor="@color/black"
+        android:textColorHint="@color/hintColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sendMessage"
         app:layout_constraintStart_toEndOf="@+id/addAttachments"
